--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to my computer science</h1>
     <p>This is my CS information</p>
     <a href="2.html">Go to detail information</a>
-    <p>Nantakorn Thidee</p>
+    <p>Design by " Nantakorn Thidee "</p>
     <h1>RMUTT</h1>
 </body>
 </html>
